# nextjs-portfoliosite

./: .crush.json  .gitignore  .gitmodules  README.md  flake.nix  hosted-apps.json  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  typescript
.codex/: config.toml
docs/: synthesizer.md
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: certificate-stack.ts  static-site-stack.ts  xand1-api-stack.ts
projects/ontology/: README.md  package-lock.json  package.json
projects/synth/: package-lock.json  package.json  tailwind.config.ts
projects/xand1/: CORE_GAMEPLAY_STATUS.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
scripts/: blog-audio-post.py  hosted-apps.mjs  serve-hosted-apps.mjs
scripts/blog-audio/: README.md  bootstrap-runtime.sh  pyproject.toml  uv-run.sh  voice_workflow.py
scripts/blog-audio/src/blog_audio/: _repo.py  post_audio.py  vllm_voice_design.py  workflow.py
scripts/blog-audio/src/blog_audio_tooling.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/blog-audio/tests/: test_post_audio.py  test_vllm_voice_design.py  test_voice_workflow.py
scripts/blog-image-svg/: cli.py  manifest.py  paths.py
src/: remark-figure-caption.d.ts
src/_posts/: 2025-10-04-nix-vs-docker-reproducible-dev.ai-image-map.json  2026-02-13-abundant-cognition-needs-weight.ai-image-map.json  2026-02-15-agentic-development-feedback.ai-image-map.json  2026-03-04-retroglobe-canvas-migration.ai-image-map.json  2026-04-22-no-receiving.md  (+39 more)
(+109 files in other folders)
